--- a/COBA/Views/Main/Country.cshtml
+++ b/COBA/Views/Main/Country.cshtml
@@ -1,6 +1,7 @@
-﻿<div class="whitebg"  style="height:555px;">
+﻿<!-- BEGIN PAGE BREADCRUMBS -->
+<div ng-controller="CountryController" class="whitebg">
     <section class="content-header" style="padding-bottom:10px;">
-        <h1>            Country </h1>
+        <h1>            Country       </h1>
         <ol class="breadcrumb">
             <li>
                 <div class="actions">
@@ -9,7 +10,53 @@
             </li>
         </ol>
     </section>
+    <section class="content">
+        <div class="row">
+            <div id="grid1" ui-grid="CurrencyGrid" ui-grid-pagination class="grid"></div>
+        </div>
+    </section>
+    <div class="modal fade" id="currencyModel" tabindex="-1" role="dialog" data-backdrop="static" data-keyboard="false" aria-hidden="true">
+        <div class="modal-dialog" style="width:75%">
+            <div class="modal-content">
+                <div class="modal-header content-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">×</span>
+                    </button>
+                    <h4 class="modal-title" id="myModalLabel" style="margin-left:40%;">Application Approval Status</h4>
+                </div>
+                <div class="modal-body">
+                    <div>
+                        <div class="row">
+                            <div class="box-body">
+                                <div class="row">
+                                    <div ng-include="'ShowApplicationDetails'"></div>
+                                    <div class="form-group col-lg-12">
+                                        <div class="col-sm-offset-4 col-sm-10">
+                                            <span data-ng-hide="editMode">
+                                                <input type="button" value="Add" ng-click="InsertStrategy(currency)" class="btn  btn-circle btn-default btn-outline-info" />
+                                            </span>&nbsp;
+                                            <span data-ng-show="editMode">
+                                                <input type="button" value="Update" ng-click="UpdateStrategy(ecurrency)" class="btn  btn-circle btn-default btn-outline-info" />
+                                            </span>&nbsp;
+                                            <input type="button" value="Cancel" ng-click="cancel()" class="btn  btn-circle btn-default btn-outline-info" />
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="col-sm-6 col-sm-offset-2 control-label label-danger" ng-show="errorinfo.length > 0">{{errorinfo}}</label>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
-    
-
+    <div ng-include="'ViewApprovals'"></div>
 </div>
+<style>
+    .box-body {
+        padding: 4px;
+    }
+</style>
