--- a/COBA/Views/Shared/_Layout.cshtml
+++ b/COBA/Views/Shared/_Layout.cshtml
@@ -7,7 +7,6 @@
     <title> COBA</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-
     <link href="~/plugins/bootstrap-datetimepicker.min.css" rel="stylesheet" />
     <link href="~/Assert/ui-grid.min.css" rel="stylesheet" />
     @*<link rel="stylesheet" href="//cdn.rawgit.com/angular-ui/bower-ui-grid/v3.0.6/ui-grid.min.css" type="text/css" />*@
@@ -17,7 +16,6 @@
     <link rel="stylesheet" href="~/dist/css/AdminLTE.min.css">
     <link rel="stylesheet" href="~/dist/css/skins/_all-skins.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
-
 </head>
 <body ng-app="reportApp" ng-controller="MainController" class="hold-transition skin-blue sidebar-mini">
     <div class="wrapper" style="height: auto; min-height: 100%;">
@@ -26,7 +24,6 @@
                 <span class="logo-mini"><b>ACHI</b></span>
                 <span class="logo-lg"><b>ACHI</b></span>
             </a>
-
             <nav class="navbar navbar-static-top">
                 <!-- Sidebar toggle button-->
                 <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
@@ -34,7 +31,7 @@
                 </a>
                 <div class="navbar-custom-menu">
                     <ul class="nav navbar-nav">
-                      
+
                         <!-- Notifications: style can be found in dropdown.less -->
                         <li class="dropdown notifications-menu">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -48,17 +45,16 @@
                                     <ul class="menu">
                                         <li ng-repeat="n in notificationdata">
                                             <a ng-click="GetCurrencyConversionForId(n.RefNumber,N.Version,N.Comments,N.ApprovedDate,N.Status)" href="#">
-                                                <i class="fa fa-users text-aqua"></i> RefNumber {{n.RefNumber}} Version {{n.Version}} 
+                                                <i class="fa fa-users text-aqua"></i> RefNumber {{n.RefNumber}} Version {{n.Version}}
                                             </a>
                                         </li>
-                                        
+
                                     </ul>
                                 </li>
                                 <li class="footer"><a href="Approvals">View all</a></li>
                             </ul>
                         </li>
                         <!-- Tasks: style can be found in dropdown.less -->
-         
                         <!-- User Account: style can be found in dropdown.less -->
                         <li class="dropdown user user-menu">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -88,7 +84,6 @@
                 </div>
             </nav>
         </header>
-
         <aside class="main-sidebar">
             <!-- sidebar: style can be found in sidebar.less -->
             <section class="sidebar">
@@ -102,57 +97,89 @@
                         <a href="#"><i class="fa fa-circle text-success"></i>Admin</a>
                     </div>
                 </div>
-                    
+
                 <!-- sidebar menu: : style can be found in sidebar.less -->
                 <ul class="sidebar-menu" data-widget="tree">
-
                     <li class='@Html.IsActive("Main", "Index")' aria-haspopup="true">
-                        <a href="Index"><i class="fa fa-circle-o"></i> 
-                            Dashboard
+                        <a href="Index">
+                            <i class="fa fa-dashboard"></i>
+                            <span>  Dashboard</span>
                         </a>
                     </li>
                     <li class='@Html.IsActive("Main", "Strategy")'>
                         <a href="Strategy">
-                            <i class="fa fa-circle-o"></i>    Application
+                            <i class="fa fa-circle-o"></i><span>    Application</span>
                         </a>
                     </li>
-
                     <li class='@Html.IsActive("Main", "Tasks")'>
-                        <a href="Tasks"><i class="fa fa-circle-o"></i> 
-                            Change Management
+                        <a href="Tasks">
+                            <i class="fa fa-circle-o"></i>
+                            <span>Change Management</span>
                         </a>
                     </li>
-
                     <li class='@Html.IsActive("Main", "MapTask")'>
-                        <a href="MapTask"><i class="fa fa-circle-o"></i> 
-                            Map Strategy
+                        <a href="MapTask">
+                            <i class="fa fa-tasks"></i>
+                            <span>Map Strategy</span>
                         </a>
                     </li>
                     <li class='@Html.IsActive("Main", "Approvals")'>
-                        <a href="Approvals"><i class="fa fa-circle-o"></i>
-                            Approvals
+                        <a href="Approvals">
+                            <i class="fa fa-circle-o"></i>
+                            <span>Approvals</span>
                         </a>
                     </li>
                     <li class='@Html.IsActive("Main", "Emails")'>
                         <a href="Emails">
-                            <i class="fa fa-circle-o"></i> 
-                             Emails
-                            
+                            <i class="fa fa-mail-forward"></i>
+                            <span>Emails</span>
+
                         </a>
                     </li>
-
                     <li class='@Html.IsActive("Main", "Reports")' aria-haspopup="true">
-                        <a href="Reports"><i class="fa fa-circle-o"></i> 
-                            Reports
+                        <a href="Reports">
+                            <i class="fa fa-circle-o"></i>
+                            <span>Reports</span>
                         </a>
                     </li>
-
                     <li class='@Html.IsActive("Main", "Licensing")' aria-haspopup="true">
-                        <a href="Licensing"><i class="fa fa-circle-o"></i> 
-                            <i class="icon-briefcase"></i> Licensing
+                        <a href="Licensing">
+                            <i class="fa fa-circle-o"></i>
+                            <i class="icon-briefcase"></i><span> Licensing</span>
                         </a>
-
                     </li>
+                    <li class="treeview menu-open">
+                        <a href="#">
+                            <i class="fa fa-files-o"></i>
+                            <span>Utilities</span>
+                            <span class="pull-right-container">
+                                <span class="label label-primary pull-right">4</span>
+                            </span>
+                        </a>
+                        <ul class="treeview-menu" style="display: block;">
+                            <li><a href="pages/layout/top-nav.html"><i class="fa fa-circle-o"></i> Country</a></li>
+                            <li><a href="pages/layout/boxed.html"><i class="fa fa-circle-o"></i> Region</a></li>
+                            <li><a href="pages/layout/fixed.html"><i class="fa fa-circle-o"></i> Business Sector</a></li>
+                            <li><a href="pages/layout/collapsed-sidebar.html"><i class="fa fa-circle-o"></i> Application Name</a></li>
+                            <li><a href="pages/layout/fixed.html"><i class="fa fa-circle-o"></i> Application ID</a></li>
+                            <li><a href="pages/layout/fixed.html"><i class="fa fa-circle-o"></i> Business Sector</a></li>
+                            <li><a href="pages/layout/fixed.html"><i class="fa fa-circle-o"></i> Product Type</a></li>
+                        </ul>
+                    </li>
+
+                    @*<li class='@Html.IsActive("Main", "Licensing")' aria-haspopup="true">
+                            <a href="Licensing">
+                                <i class="fa fa-circle-o"></i>
+                                <i class="icon-briefcase"></i> Utilities
+
+
+                            Application
+                            Country
+                            Region
+
+
+                            </a>
+                        </li>*@
                 </ul>
             </section>
             <!-- /.sidebar -->
@@ -161,7 +188,6 @@
             <div class="container">
                 <section class="content">
                     @RenderBody()
-
                     <div class="modal fade" id="LayoutModel" tabindex="-1" role="dialog" data-backdrop="static" data-keyboard="false" aria-hidden="true">
                         <div class="modal-dialog" style="width:75%">
                             <div class="modal-content">
@@ -173,30 +199,24 @@
                                 </div>
                                 <div class="modal-body">
                                     <div>
-
                                         <div class="row">
                                             <div class="box-body">
                                                 <div class="row">
-                                                    
-                                                    <div ng-include="'ShowApprovalDetails'"></div>
 
+                                                    <div ng-include="'ShowApprovalDetails'"></div>
                                                     <div class="form-group col-lg-12">
                                                         <div class="col-sm-offset-4 col-sm-10">
 
-                                                            
-                                                                <input type="button" value="Update" ng-click="Update(currency)" class="btn  btn-circle btn-default btn-outline-info" />
+                                                            <input type="button" value="Update" ng-click="Update(currency)" class="btn  btn-circle btn-default btn-outline-info" />
                                                             &nbsp;
-                                                            
+
                                                             <input type="button" value="Cancel" ng-click="layoutcancel()" class="btn  btn-circle btn-default btn-outline-info" />
                                                         </div>
                                                     </div>
-
                                                     <div class="form-group">
                                                         <label class="col-sm-6 col-sm-offset-2 control-label label-danger" ng-show="errorinfo.length > 0">{{errorinfo}}</label>
                                                     </div>
-
                                                 </div>
-
                                             </div>
                                         </div>
                                     </div>
@@ -209,7 +229,7 @@
         </div>
         <footer class="main-footer">
             <div class="container">
-                
+
                 <div class="pull-right hidden-xs">
                     <b>Version</b> 1.0.0
                 </div>
@@ -221,14 +241,12 @@
     <script src="~/plugins/moment.js"></script>
     <script src="~/Assert/Jquery-1.11.0.min.js"></script>
     <script src="~/Assert/bootstrap.min.js"></script>
-
     @*<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>*@
     @*<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>*@
     <script src="~/bower_components/jquery-slimscroll/jquery.slimscroll.min.js"></script>
     <script src="~/bower_components/fastclick/lib/fastclick.js"></script>
     <script src="~/dist/js/adminlte.min.js"></script>
     <script src="~/dist/js/demo.js"></script>
-
     <script src="~/plugins/bootstrap-datetimepicker.js"></script>
     <script src="~/Assert/angular.js"></script>
     @*<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.js"></script>*@
@@ -236,14 +254,12 @@
     <script src="~/Assert/ui-bootstrap-tpls-0.12.1.min.js"></script>
     <script src="~/Assert/ui-grid.js"></script>
     @*<script src="//cdn.rawgit.com/angular-ui/bower-ui-grid/v3.0.6/ui-grid.min.js"></script>*@
-
     <script type="text/javascript" src="~/plugins/ng-file-upload/dist/ng-file-upload.min.js"></script>
     <script type="text/javascript" src="~/plugins/ng-file-upload/dist/ng-file-upload-shim.min.js"></script>
-
     <script src="../js/ReportApp.js"></script>
-    @*<script src="../js/UserApp.js"></script>
-        <script src="../js/RoleApp.js"></script>*@
-    
+    <script src="../js/UserApp.js"></script>
+    <script src="../js/RoleApp.js"></script>
+
     <script src="../js/HomeApp.js"></script>
     <script src="~/js/controllers/ApprovalsController.js"></script>
     <script src="~/js/controllers/StrategyController.js"></script>
@@ -251,15 +267,20 @@
     <script src="~/js/controllers/OnboardingTaskController.js"></script>
     <script src="~/js/controllers/MapTaskController.js"></script>
     <script src="~/js/controllers/EmailsController.js"></script>
+
+    <script src="~/js/controllers/ApplicationMasterController.js"></script>
+    <script src="~/js/controllers/ApprovalsController.js"></script>
+    <script src="~/js/controllers/CountryMasterController.js"></script>
+    <script src="~/js/controllers/ProductTypeMasterController.js"></script>
+    <script src="~/js/controllers/RegionMasterController.js"></script>
+
+
     <script src="~/js/services/TaskService.js"></script>
     <script src="~/js/services/OnboardingTaskService.js"></script>
     <script src="~/js/services/StrategyService.js"></script>
     <script src="~/js/services/EmailService.js"></script>
     <script src="~/js/services/MapTaskService.js"></script>
-
     <style>
-        
-
         .whitebg {
             background: #fff;
             padding: 12px 20px 15px;
@@ -308,8 +329,9 @@
             margin-left: 25%;
             color: #3c8dbc;
         }
-        .table{
-            font-size:14px !important;
+
+        .table {
+            font-size: 14px !important;
         }
 
         /*.navbar-nav > li > a {
